# PasswordGenerator

./: CMakeLists.txt  PasswordGenerator.desktop  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
.github/workflows/: main.yml
styles/: style.qss  style.qss
